[gd_scene load_steps=26 format=3 uid="uid://c1chogr8me3p8"]

[ext_resource type="Script" path="res://scripts/pawn.gd" id="1_74kxk"]
[ext_resource type="Texture2D" uid="uid://dmd7g54amvj6j" path="res://assets/Tiny Swords/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Purple/Pawn_Purple.png" id="2_o8sum"]
[ext_resource type="PackedScene" uid="uid://ce48o0t3l4arq" path="res://components/health_component.tscn" id="3_fuy17"]
[ext_resource type="PackedScene" uid="uid://djun8a4akwtaw" path="res://scenes/progress_barEnemy.tscn" id="4_6n58w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r25m2"]
atlas = ExtResource("2_o8sum")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecnfa"]
atlas = ExtResource("2_o8sum")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1yvm"]
atlas = ExtResource("2_o8sum")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j8qi"]
atlas = ExtResource("2_o8sum")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_34w8h"]
atlas = ExtResource("2_o8sum")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh3pe"]
atlas = ExtResource("2_o8sum")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wrf3"]
atlas = ExtResource("2_o8sum")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ibm8"]
atlas = ExtResource("2_o8sum")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm0tp"]
atlas = ExtResource("2_o8sum")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ayl3"]
atlas = ExtResource("2_o8sum")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw5f2"]
atlas = ExtResource("2_o8sum")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdmcr"]
atlas = ExtResource("2_o8sum")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnviy"]
atlas = ExtResource("2_o8sum")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d76um"]
atlas = ExtResource("2_o8sum")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiv8d"]
atlas = ExtResource("2_o8sum")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu75l"]
atlas = ExtResource("2_o8sum")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfxfi"]
atlas = ExtResource("2_o8sum")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0sxs"]
atlas = ExtResource("2_o8sum")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_mp61j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r25m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecnfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1yvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j8qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34w8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh3pe")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wrf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ibm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm0tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ayl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw5f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdmcr")
}],
"loop": false,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnviy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d76um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiv8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu75l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfxfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0sxs")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j5di2"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnicg"]
size = Vector2(52, 63)

[node name="Pawn" type="CharacterBody2D"]
script = ExtResource("1_74kxk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mp61j")
animation = &"attack"
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 3)
shape = SubResource("CircleShape2D_j5di2")

[node name="AreaAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2(23, 4.5)
shape = SubResource("RectangleShape2D_nnicg")
debug_color = Color(0.303095, 0.626591, 0.105504, 0.42)

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("progress_bar") instance=ExtResource("3_fuy17")]
progress_bar = NodePath("../../ProgressBar")

[node name="ProgressBar" parent="." instance=ExtResource("4_6n58w")]
offset_left = -23.0
offset_right = 21.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AreaAttack" to="." method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_area_attack_body_exited"]
